# career-agent

./: .cursorignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.agent-os/product/: decisions.md  mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/specs/2025-08-11-resume-page-length-metrics/: spec-lite.md  spec.md
.agent-os/specs/2025-08-11-resume-page-length-metrics/sub-specs/: technical-spec.md
.agent-os/specs/2025-08-11-resume-template-cli-generator/: spec-lite.md  spec.md
.agent-os/specs/2025-08-11-resume-template-cli-generator/sub-specs/: technical-spec.md
.cursor/rules/: agent_graphs.mdc  agent_hitl.mdc  agent_nodes.mdc  agent_readme.mdc  agent_state.mdc  implement_node.mdc  project_context.mdc  project_structure.mdc  python.mdc  scaffold_agent.mdc  testing.mdc
.cursor/rules/standards/cli/: best_practices.mdc
agentic/: chat.py  config.py  main.py  scrape.py  utils.py
evals/: run.py  types.py
evals/datasets/: __init__.py  commands.py  datasets.py  utils.py
evals/datasets/datasets/: __init__.py  jobs.py  jobs_and_experience.py
evals/experiments/: __init__.py  commands.py  job_requirements.py
src/: callbacks.py  cli.py  config.py  graph.py  logging_config.py  models.py  nodes.py  state.py  tools.py  types.py  utils.py
src/agents/: __init__.py
src/agents/experience/: graph.py  state.py
src/agents/experience/nodes/: job_requirements.py  review.py  summarize.py
src/agents/experience_summarizer/: __init__.py  graph.py  state.py
src/agents/experience_summarizer/nodes/: __init__.py  (+2 more)
src/agents/main/: __init__.py  graph.py  state.py
src/agents/responses_summarizer/: __init__.py  graph.py  state.py
src/agents/resume_generator/: README.md  __init__.py  graph.py  state.py
src/core/: callbacks.py  hitl.py  models.py
src/db/: cli.py  cli_io.py  database.py  models.py
src/features/: __init__.py
src/features/resume/: __init__.py  cli.py  data_adapter.py  types.py  utils.py
src/nodes/: __init__.py  chatbot.py  extract_job_metadata.py  get_feedback.py  job_requirements.py  models.py  summarize_experience_node.py  tool_node.py  work_experience.py  wrapped_experience_agent.py  wrapped_responses_agent.py  wrapped_resume_generator.py  write_cover_letter.py  write_resume.py
src/resume/: content.py  types.py  utils.py
src/schemas/: __init__.py  application.py  background.py  interview.py  job.py  motivation.py  resume.py
src/storage/: FileStorage.py  __init__.py  database.py  get_background.py  parse_experience.py  parse_interview_questions.py  parse_job.py  parse_motivations_and_interests.py
test/: test_data_adapter.py  test_database.py  test_database_simple.py  test_logging.py  test_parse_experience.py  test_parse_interview_questions.py  test_parse_job.py  test_parse_motivations_and_interests.py  test_pdf_metrics.py  test_resume_utils.py  test_setup.py
(+26 files in other folders)
