[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "agentic"
version = "0.1.0"
description = "A Python project for agentic systems"
authors = [{ name = "LatentVectors" }]

readme = "README.md"
requires-python = ">=3.12"
classifiers = ["Programming Language :: Python :: 3.12"]


[tool.ruff]
line-length = 99
src = ["agentic"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["I"]


[tool.mypy]
files = ["agentic/**/*.py"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
